--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "receipt-finder",
+  "name": "recipe-finder",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6"
